[gd_scene load_steps=3 format=3 uid="uid://bb3y874g16k2f"]

[ext_resource type="Script" uid="uid://cv46gyxsiubh7" path="res://Scenes/toolbar.gd" id="1_tdkl7"]
[ext_resource type="Script" uid="uid://b4rudgjki04mu" path="res://Scenes/Elements/menu_bar.gd" id="2_sc748"]

[node name="Toolbar" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1042.0
offset_bottom = -650.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tdkl7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("2_sc748")

[node name="File" type="PopupMenu" parent="HBoxContainer/MenuBar"]
oversampling_override = 1.0
title = "File"

[node name="Edit" type="PopupMenu" parent="HBoxContainer/MenuBar"]

[node name="Model" type="PopupMenu" parent="HBoxContainer/MenuBar"]

[node name="Show" type="PopupMenu" parent="HBoxContainer/MenuBar"]

[node name="Help" type="PopupMenu" parent="HBoxContainer/MenuBar"]

[node name="FileDialog" type="FileDialog" parent="."]
oversampling_override = 1.0

[connection signal="id_pressed" from="HBoxContainer/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_file_dialog_confirmed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
